test-api-deploy/env/local-dev-bg/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-api
  labels:
    name: test-api
