test-api-deploy/env/local-dev-bg/test-api-rollout-patch.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: test-api
spec:
  strategy:
    blueGreen:
      activeService: test-api-service
      previewService: test-api-preview-service
      autoPromotionEnabled: false
