test-api-deploy/env/local-dev-bg/test-api-preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-api-preview-service
spec:
  selector:
    app: test-api
  ports:
  - port: 80
    targetPort: test-api-svc
