test-api-deploy/env/local-dev-bg/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-app-bg-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /test-api/bg/active
        pathType: Prefix
        backend:
          service: 
            name: test-api-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-app-bg-ingress-preview
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /test-api/bg/preview
        pathType: Prefix
        backend:
          service: 
            name: test-api-preview-service
            port:
              number: 80
